Correction mobile version

--- a/style/mobile/summary_mobile.css
+++ b/style/mobile/summary_mobile.css
@@ -22,7 +22,7 @@
     }
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1000px) {
     .content {
         top: 270px;
         left: 165px;
